--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,5 +1,14 @@
 /* Banner img general resolution */
 img {
   max-width: 100%;
-  height: 700px;
+  height: 500px;
+  object-fit: cover;
+}
+
+
+/* Banner img mobile resolution */
+@media screen and (max-width: 768px) {
+  img {
+    height: 400px;
+  }
 }
